apps/base/pihole/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-dashboard-https-minas
  namespace: kube-system
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: pihole-dashboard-https-minas
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.saldivar.io`) && PathPrefix(`/admin`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
        - name: security
          namespace: kube-system
      services:
        - name: pihole-web
          port: http

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-dashboard-https-pelargir
  namespace: kube-system
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: pihole-dashboard-https-pelargir
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.pelargir.saldivar.io`) && PathPrefix(`/admin`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
        - name: security
          namespace: kube-system
      services:
        - name: pihole-web
          port: http
